# ABCurves-Capture

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: windows-ci.yml  windows-release.yml
cmake/: ABCTBuildIdentity.cmake  ABCTRelease.cmake  windows_version.rc.in
docs/: ARCHITECTURE.md  DATA_CONTRACT.md  FAILURE_POLICY.md  INSTALLATION.md  PRIVACY.md  RELEASING.md  RESEARCH_EXPORT.md  TESTING.md  USER_GUIDE.md
licenses/: USBPcap-BSD-2-Clause.txt
media/: README.md
media/sfx/: README.txt
scripts/: Package-Windows.ps1  Test-PackagingInfrastructure.ps1  Test-ReleasePackage.ps1
src/acquisition/: CaptureHelperClient.cpp  CaptureHelperClient.h  CaptureHelperRecordingControl.cpp  CaptureHelperRecordingControl.h  CaptureWorker.cpp  CaptureWorker.h  CertificationProbe.cpp  CertificationProbe.h  CertificationProbeClient.cpp  CertificationProbeClient.h
src/app/: ApplicationPaths.cpp  ApplicationPaths.h  HighscoreStore.cpp  HighscoreStore.h  ParticipantApplication.cpp  ParticipantApplication.h  ParticipantFlow.cpp  ParticipantFlow.h  ParticipantInventory.cpp  ParticipantInventory.h  ParticipantSettings.cpp  ParticipantSettings.h  ParticipantUi.cpp  ParticipantUi.h  app.manifest  app_main.cpp  console.manifest  console.rc
src/audio/: AudioEngine.cpp  AudioEngine.h
src/base/: AtomicFile.cpp  AtomicFile.h  Binary.cpp  Binary.h  BuildInfo.h  Crc32.cpp  Crc32.h  Json.cpp  Json.h  Sha256.cpp  Sha256.h  ThreadShutdownGuard.h
src/capture/: DevicePcapWriter.cpp  DevicePcapWriter.h  HidDescriptor.cpp  HidDescriptor.h  LiveReportMirror.cpp  LiveReportMirror.h  MouseReportExtractor.cpp  MouseReportExtractor.h  PcapReader.cpp  PcapReader.h  ReportStream.cpp  ReportStream.h  StreamingPcapParser.cpp  StreamingPcapParser.h  UsbPcapPacket.cpp  UsbPcapPacket.h
src/derive/: AxisConvention.cpp  AxisConvention.h  ClockAnchorFit.cpp  ClockAnchorFit.h  MillisecondDeriver.cpp  MillisecondDeriver.h
src/device/: ActivityCorrelation.cpp  ActivityCorrelation.h  CertificationFlow.cpp  CertificationFlow.h  MouseDiscovery.cpp  MouseDiscovery.h  PhysicalMouseSelection.cpp  PhysicalMouseSelection.h  RawDeviceOrigin.h  UsbTopologyResolver.cpp  UsbTopologyResolver.h  WindowsHidDecoderEvidence.cpp  WindowsHidDecoderEvidence.h
src/export/: ResearchExport.cpp  ResearchExport.h
src/platform/: ClockAnchor.cpp  ClockAnchor.h  QpcClock.cpp  QpcClock.h  RawInput.cpp  RawInput.h  Win32Window.cpp  Win32Window.h
src/protocol/: protocol_v1.cpp  protocol_v1.hpp
src/render/: CrosshairRenderer.cpp  CrosshairRenderer.h  D3D11Renderer.cpp  D3D11Renderer.h  GridRenderer.cpp  GridRenderer.h  HudRenderer.cpp  HudRenderer.h  RenderTypes.h  TargetRenderer.cpp  TargetRenderer.h  UiTextLayout.cpp  UiTextLayout.h
src/session/: AbandonedSessionRecovery.cpp  AbandonedSessionRecovery.h  AppendOnlyJsonl.cpp  AppendOnlyJsonl.h  CaptureArtifactValidation.cpp  CaptureArtifactValidation.h  CapturePrefixRecovery.cpp  CapturePrefixRecovery.h  ClockJournal.cpp  ClockJournal.h  CrashRecovery.cpp  CrashRecovery.h  FailurePolicy.cpp  FailurePolicy.h  GameplayJournal.cpp  GameplayJournal.h  PseudonymousIdentity.cpp  PseudonymousIdentity.h  RecordingSession.cpp  RecordingSession.h  SessionArchive.cpp  SessionArchive.h  SessionValidator.cpp  SessionValidator.h  SessionWorkspace.cpp  SessionWorkspace.h
src/tools/: capture_helper_main.cpp  diagnostic.manifest  diagnostic.rc  probe_helper_main.cpp  research_export_main.cpp  session_tool_main.cpp  usbpcap_diagnostic_main.cpp
src/trainer/: TrainerEngine.cpp  TrainerEngine.h
src/windows_capture/: NativeUsbPcap.cpp  NativeUsbPcap.h
tests/: TestHarness.h  abandoned_session_recovery_tests.cpp  acquisition_worker_tests.cpp  app_settings_tests.cpp  build_identity_test.cmake  capture_helper_client_tests.cpp  capture_recording_control_tests.cpp  capture_source_tests.cpp  certification_flow_tests.cpp  certification_probe_client_tests.cpp  certification_probe_tests.cpp  certification_tests.cpp  clock_journal_tests.cpp  derive_contract_tests.cpp  gameplay_journal_tests.cpp  highscore_store_tests.cpp  participant_flow_tests.cpp  participant_ui_tests.cpp  recording_session_tests.cpp  research_export_tests.cpp  session_policy_tests.cpp  session_recovery_tests.cpp  session_workspace_tests.cpp  test_main.cpp  trainer_engine_tests.cpp
tests/release_fixture/: CMakeLists.txt  fixture_main.cpp
tools/: inspect_capture_session.py
